--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/sensors
+spring.datasource.url = jdbc:mysql://localhost:3306/test
 spring.datasource.username = root
-spring.datasource.password = 123456
+spring.datasource.password = root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 server.port=8080
